# manager

./: .bedrock_agentcore.yaml  .gitignore  .infisical.json  CLAUDE.md  README.md  pyproject.toml
src/manager/: agent.py  runtime.py  tools.py  worker.py
